# balloon-predictor

./: .gitignore  LICENSE  README.md  pyproject.toml  vercel.json
.zenflow/tasks/create-a-react-app-to-test-and-d-880b/: plan.md
.zenflow/tasks/error-on-trajectory-predictor-8d45/: plan.md
.zenflow/tasks/let-s-build-the-balloon-predicto-632a/: plan.md
api/: index.py
balloon_predictor/: __init__.py  burst.py  cli.py  gfs.py  models.py  monte_carlo.py  tawhiri.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: BurstCalculator.jsx  TrajectoryPredictor.jsx
tests/: test_burst.py  test_tawhiri.py
