[project]
name = "balloon-predictor"
version = "0.1.0"
description = "High-altitude balloon flight prediction — Tawhiri client, burst calculator, Monte Carlo ensembles."
authors = [{name = "Frank Blau"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "numpy>=1.26",
    "typer>=0.12",
]

[project.optional-dependencies]
gfs = ["xarray>=2024.1", "cfgrib>=0.9", "netcdf4>=1.6"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
balloon-predict = "balloon_predictor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
